# paripari

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  TODO  example.hs  ghc-specialise-parser  package.yaml  paripari.cabal  parparsec.cabal  specialise-all  specialise-all.hs  stack.yaml
data/: bad.json
example-data/: bad.json
src/Text/: ParParsec.hs  PariPari.hs
src/Text/ParParsec/: Acceptor.hs  Ascii.hs  Class.hs  Combinators.hs  Decode.hs  Reporter.hs
src/Text/PariPari/: Acceptor.hs  Ascii.hs  Class.hs  Combinators.hs  Decode.hs  Internal.hs  Lens.hs  Reporter.hs
src/Text/PariPari/Internal/: Acceptor.hs  CharCombinators.hs  Chunk.hs  Class.hs  Combinators.hs  ElementCombinators.hs  Reporter.hs  Run.hs  Tracer.hs
test/: test.hs
