cabal-version: 1.12
name:           paripari
version:        0.7.0.0
synopsis:       Parser combinators with fast-path and slower fallback for error reporting
description:    PariPari offers two parsing strategies. There is a fast Acceptor and a slower Reporter. If the Acceptor fails, the Reporter returns a report about the parsing errors.
category:       Text
stability:      experimental
homepage:       https://github.com/minad/paripari#readme
bug-reports:    https://github.com/minad/paripari/issues
author:         Daniel Mendler <mail@daniel-mendler.de>
maintainer:     Daniel Mendler <mail@daniel-mendler.de>
copyright:      2018 Daniel Mendler
license:        MIT
license-file:   LICENSE
tested-with:    GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.3, GHC == 8.10.1
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/minad/paripari

library
  exposed-modules:
      Text.PariPari
      Text.PariPari.Internal.Acceptor
      Text.PariPari.Internal.Chunk
      Text.PariPari.Internal.Class
      Text.PariPari.Internal.Combinators
      Text.PariPari.Internal.Reporter
      Text.PariPari.Internal.Run
      Text.PariPari.Lens
  other-modules:
      Paths_paripari
  hs-source-dirs:
      src
  ghc-options: -O2 -Wall -Wcompat -Widentities -Wmonomorphism-restriction -Wincomplete-uni-patterns -Wincomplete-record-updates -Wtabs -fprint-potential-instances
  build-depends:
      base >=4.8 && <5
    , bytestring >=0.10 && <0.11
    , parser-combinators >=1.0 && <1.3
    , text >=0.11 && <1.3
  default-language: Haskell2010

executable paripari-example
  main-is: example.hs
  other-modules:
      Paths_paripari
  ghc-options: -Wall -Wcompat -Widentities -Wmonomorphism-restriction -Wincomplete-uni-patterns -Wincomplete-record-updates -Wtabs -fprint-potential-instances
  build-depends:
      base >=4.8 && <5
    , bytestring >=0.10 && <0.11
    , paripari
    , parser-combinators >=1.0 && <1.3
    , text >=0.11 && <1.3
  default-language: Haskell2010

executable paripari-specialise-all
  main-is: specialise-all.hs
  other-modules:
      Paths_paripari
  ghc-options: -Wall -Wcompat -Widentities -Wmonomorphism-restriction -Wincomplete-uni-patterns -Wincomplete-record-updates -Wtabs -fprint-potential-instances
  build-depends:
      base >=4.8 && <5
    , bytestring >=0.10 && <0.11
    , paripari
    , parser-combinators >=1.0 && <1.3
    , text >=0.11 && <1.3
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  other-modules:
      Paths_paripari
  hs-source-dirs:
      test
  ghc-options: -O0 -Wall -Wcompat -Widentities -Wmonomorphism-restriction -Wincomplete-uni-patterns -Wincomplete-record-updates -Wtabs -fprint-potential-instances
  build-depends:
      base >=4.8 && <5
    , bytestring >=0.10 && <0.11
    , paripari
    , parser-combinators >=1.0 && <1.3
    , random
    , tasty
    , tasty-hunit
    , text >=0.11 && <1.3
  default-language: Haskell2010
